Se adiciona imagen en la página.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <p>HTML5, CSS3, JQuery y Bootstrap</p>
         </div>
 
+       <img src="images/01.jpg" alt="paisaje" />
+        
     </div>
 
 </body>
